@@ -19,6 +19,7 @@ export("+.section",
        as.lobo,
        as.tdr,
        as.sealevel,
+       as.section,
        as.topo,
        as.windrose,
        beamUnspreadAdp,
