@@ -1,4 +1,5 @@
 0.9-4
+- as.section() added
 - add data(endeavour)
 - add map projections, with provisional functions mapPlot() etc
 - plot.ctd(): add argument 'add'
